Add links to CVEs in the report detail view

--- a/eb-flask/static/styles.css
+++ b/eb-flask/static/styles.css
@@ -41,6 +41,21 @@
   padding: 2px 0;
 }
 
+/* Add styling for CVE links */
+.ioc-item a {
+  color: #0d6efd;
+  text-decoration: none;
+}
+
+.ioc-item a:hover {
+  text-decoration: underline;
+}
+
+.ioc-item .bi-box-arrow-up-right {
+  font-size: 0.75rem;
+  vertical-align: super;
+}
+
 .report-metadata {
   display: flex;
   flex-wrap: wrap;
