Show number of true positive IOCs in the report list view

--- a/eb-flask/templates/index.html
+++ b/eb-flask/templates/index.html
@@ -69,6 +69,7 @@
                     <tr>
                         <th>Title</th>
                         <th>Source</th>
+                        <th>IOCs</th>
                         <th>Date</th>
                         <th>Actions</th>
                     </tr>
